--- a/views/dashboard/dashboard.ejs
+++ b/views/dashboard/dashboard.ejs
@@ -45,7 +45,7 @@
     </div>
     <div style="position:relative; padding-top:60%; width:100%; overflow:hidden; border-radius:12px; background:#fff;">
       <iframe
-        src="https://app.powerbi.com/view?r=eyJrIjoiMDg3NTJhNGUtMzhlMy00ZDk4LWJiYTQtNDBiYWU4ZWJjZGNkIiwidCI6ImJiZTllNjlmLThjNWQtNGE1Zi1iNGM3LTQ1Yzc0MWMwYTE4NyIsImMiOjZ9&pageName=99016801544a960c71b5"
+        src="https://app.powerbi.com/view?r=eyJrIjoiNWNjYzc1MWItYjNhYS00YTcwLTg2MTAtY2I4MDA0MDk3MmYyIiwidCI6ImJiZTllNjlmLThjNWQtNGE1Zi1iNGM3LTQ1Yzc0MWMwYTE4NyIsImMiOjZ9"
         title="Impact Explorer"
         style="position:absolute; top:0; left:0; width:100%; height:100%; border:none; border-radius:12px;"
         allowfullscreen
